tests/success/rvalue_tuple_subscript.bz
function get_value() -> [ int32, str ];

function main()
{
	let _ = [ 0, 0.0, "" ][1];
	let _ = get_value()[1];
}
